# api/docs/swagger.yaml
@@ -73,6 +73,15 @@ definitions:
       surname:
         type: string
     type: object
+  v1.GetUrlListResponse:
+    properties:
+      count:
+        type: integer
+      urls:
+        items:
+          $ref: '#/definitions/v1.GetUrlResponse'
+        type: array
+    type: object
   v1.GetUrlResponse:
     properties:
       created_at:
@@ -82,7 +91,7 @@ definitions:
       expires_at:
         type: string
       expires_count:
-        type: string
+        type: integer
       id:
         type: string
       long_url:
@@ -153,6 +162,21 @@ definitions:
         type: string
       updated_at:
         type: string
+    type: object
+  v1.UpdateUrlRequest:
+    properties:
+      expires_at:
+        type: string
+      expires_count:
+        type: string
+      id:
+        type: string
+      short_url:
+        type: string
+      title:
+        type: string
+      used_count:
+        type: integer
     type: object
 info:
   contact: {}
@@ -317,6 +341,81 @@ paths:
       summary: Get urls
       tags:
       - Urls
+    put:
+      consumes:
+      - application/json
+      description: Put url
+      operationId: update_url_by_id
+      parameters:
+      - description: id
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: UpdateUrlRequestBody
+        in: body
+        name: url
+        required: true
+        schema:
+          $ref: '#/definitions/v1.UpdateUrlRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: GetUrlResponseBody
+          schema:
+            $ref: '#/definitions/v1.GetUrlResponse'
+        "400":
+          description: Invalid Argument
+          schema:
+            type: string
+        "500":
+          description: Server Error
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: Put url
+      tags:
+      - Urls
+  /v1/urls/{user_id}:
+    get:
+      consumes:
+      - application/json
+      description: Get url list
+      operationId: get_url_list
+      parameters:
+      - description: limit
+        in: query
+        name: limit
+        type: string
+      - description: page
+        in: query
+        name: page
+        type: string
+      - description: user_id
+        in: path
+        name: user_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: GetUrlListResponse
+          schema:
+            $ref: '#/definitions/v1.GetUrlListResponse'
+        "400":
+          description: Invalid Argument
+          schema:
+            type: string
+        "500":
+          description: Server Error
+          schema:
+            type: string
+      summary: Get url list
+      tags:
+      - Url
   /v1/user:
     get:
       consumes:
@@ -443,6 +542,38 @@ paths:
       summary: Get User
       tags:
       - Users
+  /v1/vpn/{short_url}:
+    get:
+      consumes:
+      - application/json
+      description: Get urls
+      operationId: get_url_by_short
+      parameters:
+      - description: short_url
+        in: path
+        name: short_url
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: GetUrlResponseBody
+          schema:
+            $ref: '#/definitions/v1.GetUrlResponse'
+        "400":
+          description: Invalid Argument
+          schema:
+            type: string
+        "500":
+          description: Server Error
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: Get urls
+      tags:
+      - Urls
 securityDefinitions:
   ApiKeyAuth:
     in: header
