# api/handlers/urls.go
@@ -2,6 +2,7 @@ package handlers
 
 import (
 	"context"
+	hp "net/http"
 	"shortener-url/api/http"
 	"shortener-url/pkg/util"
 
@@ -64,6 +65,128 @@ func (h *Handler) GetUrlByID(c *gin.Context) {
 	}
 
 	resp, err := h.srvs.Url().GetByPK(c.Value("ctx").(context.Context), &structs.ById{Id: id})
+	if err != nil {
+		h.handleResponse(c, http.InternalServerError, err.Error())
+		return
+	}
+
+	h.handleResponse(c, http.OK, resp)
+}
+
+// GetUrlByShort godoc
+// @ID get_url_by_short
+// @Security ApiKeyAuth
+// @Router /v1/vpn/{short_url} [GET]
+// @Summary Get urls
+// @Description Get urls
+// @Tags Urls
+// @Accept json
+// @Produce json
+// @Param short_url path string true "short_url"
+// @Success 200 {object} v1.GetUrlResponse "GetUrlResponseBody"
+// @Response 400 {object} string "Invalid Argument"
+// @Failure 500 {object} string "Server Error"
+func (h *Handler) GetUrlByShort(c *gin.Context) {
+
+	short_url := c.Param("short_url")
+
+	resp, err := h.srvs.Url().GetByShort(c.Value("ctx").(context.Context), &structs.ShortUrl{ShortUrl: short_url})
+	if err != nil {
+		h.handleResponse(c, http.InternalServerError, err.Error())
+		return
+	}
+
+	_, err = h.srvs.Url().Update(c.Value("ctx").(context.Context), &v1.UpdateUrlRequest{
+		Id:           resp.Id,
+		Title:        resp.Title,
+		ShortUrl:     resp.ShortUrl,
+		ExpiresAt:    resp.ExpiresAt,
+		ExpiresCount: resp.ExpiresCount,
+		UsedCount:    resp.UsedCount + 1,
+	})
+	if err != nil {
+		h.handleResponse(c, http.InternalServerError, err.Error())
+		return
+	}
+
+	c.Redirect(hp.StatusMovedPermanently, resp.LongUrl)
+}
+
+// UpdateUrlByID godoc
+// @ID update_url_by_id
+// @Security ApiKeyAuth
+// @Router /v1/urls/{id} [PUT]
+// @Summary Put url
+// @Description Put url
+// @Tags Urls
+// @Accept json
+// @Produce json
+// @Param id path string true "id"
+// @Param url body v1.UpdateUrlRequest true "UpdateUrlRequestBody"
+// @Success 200 {object} v1.GetUrlResponse "GetUrlResponseBody"
+// @Response 400 {object} string "Invalid Argument"
+// @Failure 500 {object} string "Server Error"
+func (h *Handler) UpdateUrl(c *gin.Context) {
+	req := v1.UpdateUrlRequest{}
+	id := c.Param("id")
+	if !util.IsValidUUID(id) {
+		h.handleResponse(c, http.InvalidArgument, "id is an invalid uuid")
+		return
+	}
+
+	err := c.ShouldBindJSON(&req)
+	if err != nil {
+		h.handleResponse(c, http.BadRequest, err.Error())
+		return
+	}
+	req.Id = id
+
+	resp, err := h.srvs.Url().Update(c.Value("ctx").(context.Context), &req)
+	if err != nil {
+		h.handleResponse(c, http.InternalServerError, err.Error())
+		return
+	}
+
+	h.handleResponse(c, http.OK, resp)
+}
+
+// GetUrlList godoc
+// @ID get_url_list
+// @Router /v1/urls/{user_id} [GET]
+// @Summary Get url list
+// @Description Get url list
+// @Tags Url
+// @Accept json
+// @Produce json
+// @Param limit query string false "limit"
+// @Param page query string false "page"
+// @Param user_id path string true "user_id"
+// @Success 200 {object} v1.GetUrlListResponse "GetUrlListResponse"
+// @Response 400 {object} string "Invalid Argument"
+// @Failure 500 {object} string "Server Error"
+func (h *Handler) GetUrlList(c *gin.Context) {
+
+	limit, err := h.getLimitParam(c)
+	if err != nil {
+		h.handleResponse(c, http.InvalidArgument, err.Error())
+		return
+	}
+	page, err := h.getPageParam(c)
+	if err != nil {
+		h.handleResponse(c, http.InvalidArgument, err.Error())
+		return
+	}
+	user_id := c.Param("user_id")
+	if !util.IsValidUUID(user_id) {
+		h.handleResponse(c, http.InvalidArgument, "id is an invalid uuid")
+		return
+	}
+
+	resp, err := h.srvs.Url().GetList(c.Request.Context(), &structs.ListRequest{
+		Limit: int32(limit),
+		Page:  int32(page),
+		Id:    user_id,
+	})
 	if err != nil {
 		h.handleResponse(c, http.InternalServerError, err.Error())
 		return
