# structs/structs.go
@@ -9,6 +9,11 @@ type ByIds struct {
 }
 
 type ListRequest struct {
-	Limit int32 `json:"limit"`
-	Page  int32 `json:"page"`
+	Id    string `json:"id"`
+	Limit int32  `json:"limit"`
+	Page  int32  `json:"page"`
+}
+
+type ShortUrl struct {
+	ShortUrl string `json:"short_url"`
 }
